--- a/Index.html
+++ b/Index.html
@@ -197,28 +197,40 @@
             </section>
         </section>
         <hr>
-        <section><!--Sobre Nosotros-->
-            <h1>Bienvenidos a Git Food</h1>
-            <p>
-                En Git-Food, creemos que la cocina es más que solo preparar alimentos; es una forma de expresar amor, creatividad y tradición. 
-                Nuestra misión es reunir a amantes de la cocina de todas partes, ofreciendo una plataforma donde puedan descubrir, compartir y disfrutar de recetas deliciosas y accesibles.
-            </p>
-            <h2>Nuestra Historia</h2>
-            <p>Todo comenzó como un pequeño proyecto en la cocina de nuestra casa, donde la pasión por la gastronomía se transformó en una aventura culinaria. 
-                Con el tiempo, nos dimos cuenta de que había una gran comunidad de personas que, como nosotros, buscaban inspiración para sus comidas diarias y ocasiones especiales. 
-                Así nació Git Food, un espacio dedicado a la recopilación de recetas que abarcan desde entradas encantadoras hasta postres decadentes.
-            </p>
-            <h2>Lo Que Ofrecemos</h2>
-            <ul>
-                <li><b>Recetas Variadas:</b> Ya seas un principiante o un chef experimentado, aquí encontrarás una amplia gama de recetas que se adaptan a todos los niveles de habilidad y preferencias dietéticas. 
-                    Desde platos vegetarianos hasta opciones con carne, hay algo para cada gusto.
-                </li>
-                <li><b>Consejos y Trucos:</b> Creemos que cocinar debe ser una experiencia divertida y sin estrés. Por eso, compartimos consejos útiles, técnicas de cocina y trucos que facilitarán tu tiempo en la cocina.
-                </li>
-                <li><b>Comunidad:</b> Nos esforzamos por construir una comunidad donde los amantes de la cocina puedan compartir sus experiencias, recetas y consejos. 
-                    Te invitamos a participar, dejar comentarios y compartir tus propias creaciones.
-                </li>
-            </ul>
+        <section class="Owner"><!--Sobre Nosotros-->
+            <div class="card">
+                <div class="front">
+                    <img src="./Recetas/Imagenes_Recetas/Owner1.jpg" alt="">
+                    <h1>Duber Andres Monsalve Jaramillo</h1>
+                    <p class="profesion">Desarrollador Junior</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est deleniti modi commodi amet suscipit delectus in dignissimos. 
+                        Necessitatibus soluta, asperiores molestias tempore quos autem ad, fugit perspiciatis cupiditate perferendis consectetur.</p>
+                </div>
+                <div class="back" id="card-Git">
+                    <h1>B</h1>
+                </div>
+            </div>
+            <div class="card">
+                <div class="front">
+                    <img src="./Imagenes/Logo_Git-Food.png" alt="">
+                    <h1>A</h1>
+                </div>
+                <div class="back">
+                    <h1>B</h1>
+                </div>
+            </div>
+            <div class="card">
+                <div class="front">
+                    <img src="./Recetas/Imagenes_Recetas/Owner2.jpg" alt="">
+                    <h1>Jacobo ArroYave Villada</h1>
+                    <p class="profesion">Desarrollador Junior</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est deleniti modi commodi amet suscipit delectus in dignissimos. 
+                        Necessitatibus soluta, asperiores molestias tempore quos autem ad, fugit perspiciatis cupiditate perferendis consectetur.</p>
+                </div>
+                <div class="back">
+                    <h1>B</h1>
+                </div>
+            </div>
         </section>
         <hr>
     <form action="#" method="POST">
