--- a/Index.html
+++ b/Index.html
@@ -87,6 +87,7 @@
             </div>
         </div>
     </section>
+    <!-- Cartas de cuchillos -->
     <section class="Card-knifes">
         <div class="list-card-knifes">
         <div class="card-categori knife-chef">
