--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
+    <main>
     <header>
         <div class="container-hero">
             <div class="container hero">
@@ -108,9 +109,7 @@
         </div>
         </div>
     </section>
-
-        <hr>
-        <section class="Owner"><!--Sobre Nosotros-->
+    <section class="Owner"><!--Sobre Nosotros-->
             <div class="card">
                 <div class="front">
                     <img src="./Recetas/Imagenes_Recetas/Owner1.jpg" alt="">
@@ -144,36 +143,33 @@
                     <h1>B</h1>
                 </div>
             </div>
-        </section>
-        <hr>
-    <form action="#" method="POST">
-        <label for="username">Nombre de Usuario:</label>
-        <input type="text" id="username" name="username" required>
-        <br>
+    </section>
 
-        <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email" required>
-        <br>
+    <section class="register"><!--REGITRO-->
+        <form action="">
+            <h2>Login</h2>
+            <label for="Username">Usuario</label>
+            <input type="text" id="username">
+            <label for="Password">Contraseña</label>
+            <input type="password" id="password">
+            <div class="remember">
+                <p>Recordar</p>
+                <p>Olvide contraseña</p>
+            </div>
+            <input type="submit" class="btn-1" value="Iniciar">
+        </form>
+        <form action="">
+            <h2>Register</h2>
+            <label for="Email">Email</label>
+            <input type="email" id="email">
+            <label for="Username">Ingrese Nombre De Usuario</label>
+            <input type="text" id="username">
+            <label for="Password">Contraseña</label>
+            <input type="password" id="password">
+        </form>
+    </section>
 
-        <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" required>
-        <br>
-
-        <input type="submit" value="Registrar">
-    </form>
-
-    <h2>Formulario de Inicio de Sesión</h2>
-    <form action="#" method="POST">
-        <label for="login-username">Nombre de Usuario:</label>
-        <input type="text" id="login-username" name="login-username" required>
-        <br>
-
-        <label for="login-password">Contraseña:</label>
-        <input type="password" id="login-password" name="login-password" required>
-        <br>
-
-        <input type="submit" value="Iniciar Sesión">
-    </form>
+    
     </main>
     <hr>
     <footer>
