--- a/Index.html
+++ b/Index.html
@@ -146,6 +146,13 @@
     </section>
 
     <section class="register"><!--REGITRO-->
+        <div class="abeas">
+            <p>Ya cuentas con una cuenta para aportar mas maravillas a nuestro recetario ?</p>
+            <p>Si ya te registrate puedes inicar seccion aquí</p>
+            <input type="submit" class="btn-1" id="loginbtn" value="Iniciar Seccion">
+            <p>Si quires aportar a nuestro creciente recetario puedes registrarte</p>
+            <input type="submit" class="btn-1" id="registerbtn" value=" Registrarme">
+        </div>
         <form action="">
             <h2>Login</h2>
             <label for="Username">Usuario</label>
@@ -166,6 +173,7 @@
             <input type="text" id="username">
             <label for="Password">Contraseña</label>
             <input type="password" id="password">
+            <input type="submit" class="btn-1" value="Iniciar">
         </form>
     </section>
 
