--- a/Index.html
+++ b/Index.html
@@ -180,20 +180,52 @@
     
     </main>
     <hr>
-    <footer>
-        <div>
-            <h3>GIT-FOOD</h3>
-            <p>Explora recetas tradicionales y modernas que celebran la diversidad culinaria. 
-                    Comparte momentos especiales alrededor de la mesa con nuestras deliciosas propuestas.</p>
-            <ul>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">Twitter</a></li>
-            </ul>
-        </div>
-        <div>
-            <p>© 2023 GIT-FOOD. Todos los derechos reservados.</p>
-        </div>
-    </footer>
+    <footer class="footer">
+        <ul class="social-icon">
+          <li class="icon-elem">
+            <a href="" class="icon">
+              <ion-icon name="logo-youtube"></ion-icon>
+            </a>
+          </li>
+          <li class="icon-elem">
+            <a href="" class="icon">
+              <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+          </li>
+          <li class="icon-elem">
+            <a href="" class="icon">
+              <ion-icon name="logo-whatsapp"></ion-icon>
+            </a>
+          </li>
+          <li class="icon-elem">
+            <a href="" class="icon">
+              <ion-icon name="logo-facebook"></ion-icon>
+            </a>
+          </li>
+          <li class="icon-elem">
+            <a href="" class="icon">
+              <ion-icon name="mail-outline"></ion-icon>
+            </a>
+          </li>
+        </ul>
+        <ul class="menu">
+          <li class="menu-elem">
+            <a href="" class="menu-icon"> Inicio </a>
+          </li>
+          <li class="menu-elem">
+            <a href="" class="menu-icon"> Equipo </a>
+          </li>
+          <li class="menu-elem">
+            <a href="" class="menu-icon"> Contacto </a>
+          </li>
+          <li class="menu-elem">
+            <a href="" class="menu-icon"> Video </a>
+          </li>
+          <li class="menu-elem">
+            <a href="" class="menu-icon"> Sobre Nosotros </a>
+          </li>
+        </ul>
+        <p class="text">2024 | Git-Food Todos los derechos reservados</p>
+      </footer>
 </body>
 </html>
