--- a/Index.html
+++ b/Index.html
@@ -72,19 +72,19 @@
         <div class="list-card-categories">
             <div class="card-categori entrance">
                 <img src="./Recetas/Imagenes_Recetas/Entrada_Empanada.jpg" alt="Icono Entrada">
-                <p>Entradas</p>
+                <a href="./Recetas/Entradas/Entradas.html"><p>Entradas</p></a>
             </div>
             <div class="card-categori main-course">
                 <img src="./Recetas/Imagenes_Recetas/Pollo_Al_Limon.jpg" alt="Icono Plato Fuerte">
-                <p>Plato Fuerte</p>
+                <a href="./Recetas/Plato_Fuerte/Plato_Fuerte.html"><p>Plato Fuerte</p></a>
             </div>
             <div class="card-categori garrison">
                 <img src="./Recetas/Imagenes_Recetas/Puré_de_Papas.jpg" alt="Icono Guarnicion">
-                <p>Guarnicion</p>
+                <a href="./Recetas/Guarniciones/Guarniciones.html"><p>Guarnicion</p></a>
             </div>
             <div class="card-categori dessert">
                 <img src="./Recetas/Imagenes_Recetas/Flan_de_Caramelo.jpg" alt="Icono Postre">
-                <p>Postre</p>
+                <a href="./Recetas/Postres/Postres.html"><p>Postre</p></a>
             </div>
         </div>
     </section>
@@ -110,6 +110,7 @@
         </div>
     </section>
     <section class="Owner"><!--Sobre Nosotros-->
+        
             <div class="card">
                 <div class="front">
                     <img src="./Recetas/Imagenes_Recetas/Owner1.jpg" alt="">
@@ -144,7 +145,6 @@
                 </div>
             </div>
     </section>
-
     <section class="register"><!--REGITRO-->
         <div class="abeas">
             <p>Ya cuentas con una cuenta para aportar mas maravillas a nuestro recetario ?</p>
@@ -175,9 +175,7 @@
             <input type="password" id="password">
             <input type="submit" class="btn-1" value="Iniciar">
         </form>
-    </section>
-
-    
+    </section>   
     </main>
     <hr>
     <footer class="footer">
