--- a/Recetas/Plato_Fuerte/Plato_Fuerte.html
+++ b/Recetas/Plato_Fuerte/Plato_Fuerte.html
@@ -39,7 +39,7 @@
             <nav class="navbar container">
                 <i class="fa-solid fa-bars"></i>
                 <ul class="menu">
-                    <li><a href="#">Inicio</a></li>
+                    <li><a href="/Index.html">Inicio</a></li>
                     <li><a href="#">Recetas</a></li>
                     <li><a href="#">Cuchillos</a></li>
                     <li><a href="#">Sobre Nosotros</a></li>
