--- a/Recetas/Entradas/Entradas.html
+++ b/Recetas/Entradas/Entradas.html
@@ -59,15 +59,17 @@
             <h6>Bruschetta de Tomate y Albahaca</h6>
         </div>
         <div class="card_info">
-            <p class="title">Bruschetta de Tomate y Albahaca</p>
-            <div class="description">
-                <div class="item">
-                    <i class="fa-regular fa-clock"></i>
-                    <p>40 Min</p>
-                </div>
-                <div class="item">
-                    <i class="fa-regular fa-user"></i>
-                    <p>4</p>
+            <div class="head">
+                <p class="title">Bruschetta de Tomate y Albahaca</p>
+                <div class="description">
+                    <div class="item">
+                        <i class="fa-regular fa-clock"></i>
+                        <p>40 Min</p>
+                    </div>
+                    <div class="item">
+                        <i class="fa-regular fa-user"></i>
+                        <p>4</p>
+                    </div>
                 </div>
             </div>
             <div class="content">
