--- a/Index.html
+++ b/Index.html
@@ -15,10 +15,10 @@
         <div class="container-hero">
             <div class="container hero">
                 <div class="customer-support">
-                    <i class="fa-solid fa-headset"></i>
+                    <!--<i class="fa-solid fa-headset"></i>
                     <div class="content-customer-support">
                         <span class="text">Soporte al usuario</span>
-                    </div>
+                    </div>-->
                 </div>
 
                 <div class="container-logo">
@@ -28,11 +28,11 @@
 
                 <div class="container-user">
                     <i class="fa-solid fa-user"></i>
-                    <i class="fa-solid fa-basket-shopping"></i>
+                    <!--<i class="fa-solid fa-basket-shopping"></i>
                     <div class="content-shopping-cart">
                         <span class="text">Carrito</span>
                         <span class="number">(0)</span>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
@@ -41,9 +41,7 @@
                 <i class="fa-solid fa-bars"></i>
                 <ul class="menu">
                     <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Recetas</a></li>
-                    <li><a href="#">Cuchillos</a></li>
-                    <li><a href="#">Sobre Nosotros</a></li>
+                    <li><a href="/Recetas/Recetas.html">Recetas</a></li>
                 </ul>
 
                 <form class="search-form">
@@ -88,29 +86,9 @@
             </div>
         </div>
     </section>
-    <!-- Cartas de cuchillos -->
-    <section class="Card-knifes">
-        <div class="list-card-knifes">
-        <div class="card-categori knife-chef">
-            <img src="" alt="">
-            <p>Cuchillo chef</p>
-        </div>
-        <div class="card-categori knife-fillet">
-            <img src="" alt="">
-            <p>Cuchillo filetero</p>
-        </div>
-        <div class="card-categori knife-greengrocer">
-            <img src="" alt="">
-            <p>Cuchillo verdulero</p>
-        </div>
-        <div class="card-categori knife-bread">
-            <img src="" alt="">
-            <p>Cuchillo para pan</p>
-        </div>
-        </div>
-    </section>
+
     <section class="Owner"><!--Sobre Nosotros-->
-        
+        <div class="cont">
             <div class="card">
                 <div class="front">
                     <img src="./Recetas/Imagenes_Recetas/Owner1.jpg" alt="">
@@ -144,37 +122,40 @@
                     <h1>B</h1>
                 </div>
             </div>
+        </div>
     </section>
     <section class="register"><!--REGITRO-->
-        <div class="abeas">
-            <p>Ya cuentas con una cuenta para aportar mas maravillas a nuestro recetario ?</p>
-            <p>Si ya te registrate puedes inicar seccion aquí</p>
-            <input type="submit" class="btn-1" id="loginbtn" value="Iniciar Seccion">
-            <p>Si quires aportar a nuestro creciente recetario puedes registrarte</p>
-            <input type="submit" class="btn-1" id="registerbtn" value=" Registrarme">
-        </div>
-        <form action="">
-            <h2>Login</h2>
-            <label for="Username">Usuario</label>
-            <input type="text" id="username">
-            <label for="Password">Contraseña</label>
-            <input type="password" id="password">
-            <div class="remember">
-                <p>Recordar</p>
-                <p>Olvide contraseña</p>
+        <div class="cont_register">
+            <div class="abeas">
+                <p>Ya cuentas con una cuenta para aportar mas maravillas a nuestro recetario ?</p>
+                <p>Si ya te registrate puedes inicar seccion aquí</p>
+                <input type="submit" class="btn-1" id="loginbtn" value="Iniciar Seccion">
+                <p>Si quires aportar a nuestro creciente recetario puedes registrarte</p>
+                <input type="submit" class="btn-1" id="registerbtn" value=" Registrarme">
             </div>
-            <input type="submit" class="btn-1" value="Iniciar">
-        </form>
-        <form action="">
-            <h2>Register</h2>
-            <label for="Email">Email</label>
-            <input type="email" id="email">
-            <label for="Username">Ingrese Nombre De Usuario</label>
-            <input type="text" id="username">
-            <label for="Password">Contraseña</label>
-            <input type="password" id="password">
-            <input type="submit" class="btn-1" value="Iniciar">
-        </form>
+            <form action="">
+                <h2>Login</h2>
+                <label for="Username">Usuario</label>
+                <input type="text" id="username">
+                <label for="Password">Contraseña</label>
+                <input type="password" id="password">
+                <div class="remember">
+                    <p>Recordar</p>
+                    <p>Olvide contraseña</p>
+                </div>
+                <input type="submit" class="btn-1" value="Iniciar">
+            </form>
+            <form action="">
+                <h2>Register</h2>
+                <label for="Email">Email</label>
+                <input type="email" id="email">
+                <label for="Username">Ingrese Nombre De Usuario</label>
+                <input type="text" id="username">
+                <label for="Password">Contraseña</label>
+                <input type="password" id="password">
+                <input type="submit" class="btn-1" value="Iniciar">
+            </form>
+        </div>
     </section>   
     </main>
     <hr>
