--- a/Recetas/Entradas/Entradas.html
+++ b/Recetas/Entradas/Entradas.html
@@ -14,10 +14,10 @@
         <div class="container-hero">
             <div class="container hero">
                 <div class="customer-support">
-                    <i class="fa-solid fa-headset"></i>
+                    <!--<i class="fa-solid fa-headset"></i>
                     <div class="content-customer-support">
                         <span class="text">Soporte al usuario</span>
-                    </div>
+                    </div>-->
                 </div>
 
                 <div class="container-logo">
@@ -27,11 +27,11 @@
 
                 <div class="container-user">
                     <i class="fa-solid fa-user"></i>
-                    <i class="fa-solid fa-basket-shopping"></i>
+                    <!--<i class="fa-solid fa-basket-shopping"></i>
                     <div class="content-shopping-cart">
                         <span class="text">Carrito</span>
                         <span class="number">(0)</span>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
@@ -39,10 +39,8 @@
             <nav class="navbar container">
                 <i class="fa-solid fa-bars"></i>
                 <ul class="menu">
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Recetas</a></li>
-                    <li><a href="#">Cuchillos</a></li>
-                    <li><a href="#">Sobre Nosotros</a></li>
+                    <li><a href="/Index.html">Inicio</a></li>
+                    <li><a href="/Recetas/Recetas.html">Recetas</a></li>
                 </ul>
 
                 <form class="search-form">
@@ -272,5 +270,52 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <ul class="social-icon">
+          <li class="icon-elem">
+            <a href="" class="icon">
+              <ion-icon name="logo-youtube"></ion-icon>
+            </a>
+          </li>
+          <li class="icon-elem">
+            <a href="" class="icon">
+              <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+          </li>
+          <li class="icon-elem">
+            <a href="" class="icon">
+              <ion-icon name="logo-whatsapp"></ion-icon>
+            </a>
+          </li>
+          <li class="icon-elem">
+            <a href="" class="icon">
+              <ion-icon name="logo-facebook"></ion-icon>
+            </a>
+          </li>
+          <li class="icon-elem">
+            <a href="" class="icon">
+              <ion-icon name="mail-outline"></ion-icon>
+            </a>
+          </li>
+        </ul>
+        <ul class="menu">
+          <li class="menu-elem">
+            <a href="" class="menu-icon"> Inicio </a>
+          </li>
+          <li class="menu-elem">
+            <a href="" class="menu-icon"> Equipo </a>
+          </li>
+          <li class="menu-elem">
+            <a href="" class="menu-icon"> Contacto </a>
+          </li>
+          <li class="menu-elem">
+            <a href="" class="menu-icon"> Video </a>
+          </li>
+          <li class="menu-elem">
+            <a href="" class="menu-icon"> Sobre Nosotros </a>
+          </li>
+        </ul>
+        <p class="text">2024 | Git-Food Todos los derechos reservados</p>
+      </footer>
 </body>
 </html>
