--- a/Recetas/Recetas.html
+++ b/Recetas/Recetas.html
@@ -101,7 +101,7 @@
             </div>
             <div class="card">
                 <div class="card_landing" img="Recetas/Guacamole.jpg">
-                    <h6>Guacamole</h6>
+                    <a href="/Recetas/Entradas/Entradas.css"><h6>Guacamole</h6></a>
                     <img src="/Recetas/Imagenes_Recetas/Guacamole.jpg" alt="">
                 </div>
                 <div class="card_info">
@@ -138,7 +138,7 @@
             </div>
             <div class="card">
                 <div class="card_landing" style="--i:url(Bruschetta_de_Tomate_y_Albahaca.jpg)">
-                    <h6>Rollitos de Jamón y Queso</h6>
+                    <a href="/Recetas/Entradas/Entradas.html"><h6>Rollitos de Jamón y Queso</h6></a>
                     <img src="/Recetas/Imagenes_Recetas/ROLLO_JAMON_Y_QUEZO.jpg" alt="">
                 </div>
                 <div class="card_info">
@@ -215,7 +215,7 @@
             </div>
             <div class="card">
                 <div class="card_landing" style="--i:url(Bruschetta_de_Tomate_y_Albahaca.jpg)">
-                    <h6>Ensalada César</h6>
+                    <a href="/Recetas/Guarniciones/Guarniciones.html"><h6>Ensalada César</h6></a>
                     <img src="/Recetas/Imagenes_Recetas/Ensalada_César.jpg" alt="">
                 </div>
                 <div class="card_info">
@@ -252,7 +252,7 @@
             </div>
             <div class="card">
                 <div class="card_landing" style="--i:url(Bruschetta_de_Tomate_y_Albahaca.jpg)">
-                    <h6>Vegetales Asados</h6>
+                    <a href="/Recetas/Guarniciones/Guarniciones.html"><h6>Vegetales Asados</h6></a>
                     <img src="/Recetas/Imagenes_Recetas/Vegetales_Asados.jpg" alt="">
                 </div>
                 <div class="card_info">
@@ -329,7 +329,7 @@
             </div>
             <div class="card">
                 <div class="card_landing" style="--i:url(Bruschetta_de_Tomate_y_Albahaca.jpg)">
-                    <h6>Spaghetti a la Boloñesa</h6>
+                    <a href="/Recetas/Plato_Fuerte/Plato_Fuerte.html"><h6>Spaghetti a la Boloñesa</h6></a>
                     <img src="/Recetas/Imagenes_Recetas/Spaghetti_a_la_Boloñesa.jpg" alt="">
                 </div>
                 <div class="card_info">
@@ -366,7 +366,7 @@
             </div>
             <div class="card">
                 <div class="card_landing" style="--i:url(Bruschetta_de_Tomate_y_Albahaca.jpg)">
-                    <h6>Tacos de Pescado</h6>
+                    <a href="/Recetas/Plato_Fuerte/Plato_Fuerte.html"><h6>Tacos de Pescado</h6></a>
                     <img src="/Recetas/Imagenes_Recetas/Tacos_de_Pescado.jpg" alt="">
                 </div>
                 <div class="card_info">
@@ -443,7 +443,7 @@
             </div>
             <div class="card">
                 <div class="card_landing" style="--i:url(Bruschetta_de_Tomate_y_Albahaca.jpg)">
-                    <h6>Tarta de Manzana</h6>
+                    <a href="/Recetas/Postres/Postres.html"><h6>Tarta de Manzana</h6></a>
                     <img src="/Recetas/Imagenes_Recetas/Tarta_de_Manzana.jpg" alt="">
                 </div>
                 <div class="card_info">
@@ -480,7 +480,7 @@
             </div>
             <div class="card">
                 <div class="card_landing" style="--i:url(Bruschetta_de_Tomate_y_Albahaca.jpg)">
-                    <h6>Flan de Caramelo</h6>
+                    <a href="/Recetas/Postres/Postres.html"><h6>Flan de Caramelo</h6></a>
                     <img src="/Recetas/Imagenes_Recetas/Flan_de_Caramelo.jpg" alt="">
                 </div>
                 <div class="card_info">
