--- a/Index.html
+++ b/Index.html
@@ -94,20 +94,33 @@
                     <img src="./Recetas/Imagenes_Recetas/Owner1.jpg" alt="">
                     <h1>Duber Andres Monsalve Jaramillo</h1>
                     <p class="profesion">Desarrollador Junior</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est deleniti modi commodi amet suscipit delectus in dignissimos. 
-                        Necessitatibus soluta, asperiores molestias tempore quos autem ad, fugit perspiciatis cupiditate perferendis consectetur.</p>
+                    <p>Soy Duber, y lo que nos inspiró a crear Git-food fue nuestra pasión por la cocina y la tecnología. 
+                        Queríamos combinar estas dos áreas para ayudar a las personas a descubrir y compartir recetas de una manera moderna y accesible. 
+                        Nos motivó la idea de crear una comunidad culinaria donde todos puedan aprender y disfrutar de la cocina.</p>
                 </div>
                 <div class="back" id="card-Git">
-                    <h1>B</h1>
+                    <p>Como desarrollador, mi mayor aspiración a futuro es seguir aprendiendo y creciendo en el campo de la tecnología. 
+                        Me encantaría llegar a ser un desarrollador senior y, eventualmente, un arquitecto de software. Lo que me guió a esta carrera 
+                        fue mi amor por la resolución de problemas y la creación de cosas nuevas. La tecnología es una herramienta increíble que puede transformar vidas, 
+                        y quiero ser parte de esa transformación.</p>
                 </div>
             </div>
             <div class="card">
                 <div class="front">
                     <img src="./Imagenes/Logo_Git-Food.png" alt="">
-                    <h1>A</h1>
+                    <p>Hoy estamos aquí para presentar algo que cambiará la manera en que pensamos sobre la cocina. 
+                        Algo revolucionario, algo que fusiona tecnología y creatividad culinaria. Les presento Git-food.
+                        Git-food es más que una simple colección de recetas. Es una comunidad vibrante, un lugar donde cualquiera, 
+                        desde el chef aficionado hasta el cocinero experimentado, puede compartir, descubrir y disfrutar de la maravilla de la cocina.</p>
                 </div>
                 <div class="back">
-                    <h1>B</h1>
+                   <p>Con Git-food, hemos simplificado el proceso. Puedes buscar recetas por ingredientes, nivel de dificultad, o incluso por tiempo de preparación. 
+                    Y no solo eso: también puedes personalizar y guardar tus recetas favoritas, compartir tus propias creaciones y conectar con otros entusiastas de la cocina.
+                    Es una herramienta diseñada para inspirar, para innovar y para hacer que cada comida sea una experiencia memorable. 
+                    Porque creemos que la cocina es uno de los actos más humanos que existen: compartir comida es compartir amor, cultura y pasión.                   
+                    Así que les invito a unirse a nosotros en este viaje culinario. Vamos a transformar la manera en que cocinamos, una receta a la vez. Esto es Git-food."
+                    
+                    ¿Qué te parece, listo para revolucionar la cocina con Git-food?</p>
                 </div>
             </div>
             <div class="card">
@@ -115,11 +128,16 @@
                     <img src="./Recetas/Imagenes_Recetas/Owner2.jpg" alt="">
                     <h1>Jacobo ArroYave Villada</h1>
                     <p class="profesion">Desarrollador Junior</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est deleniti modi commodi amet suscipit delectus in dignissimos. 
-                        Necessitatibus soluta, asperiores molestias tempore quos autem ad, fugit perspiciatis cupiditate perferendis consectetur.</p>
+                    <p>Jacobo, puedo decirte que también queríamos ofrecer una plataforma fácil de usar, 
+                        donde cualquier persona, sin importar su nivel de experiencia, pudiera encontrar recetas deliciosas y bien explicadas. 
+                        Nos encanta la idea de fomentar la creatividad en la cocina y ayudar a otros a experimentar con nuevos sabores e ingredientes. 
+                        ¡Esperamos que disfrutes usando Git-food tanto como nosotros disfrutamos creándola!</p>
                 </div>
                 <div class="back">
-                    <h1>B</h1>
+                    <p>comparto esa visión. Mi objetivo es dominar múltiples lenguajes de programación y tecnologías, y contribuir a proyectos innovadores que tengan un impacto 
+                        positivo en la sociedad. Lo que me llevó a esta carrera fue mi curiosidad insaciable y mi deseo de entender cómo funcionan las cosas. 
+                        Además, la posibilidad de colaborar con personas talentosas y creativas como Duber es una fuente constante de inspiración y motivación. 
+                        ¡El viaje es tan emocionante como el destino!</p>
                 </div>
             </div>
         </div>
