--- a/Index.html
+++ b/Index.html
@@ -144,13 +144,6 @@
     </section>
     <section class="register"><!--REGITRO-->
         <div class="cont_register">
-            <div class="abeas">
-                <p>Ya cuentas con una cuenta para aportar mas maravillas a nuestro recetario ?</p>
-                <p>Si ya te registrate puedes inicar seccion aquí</p>
-                <input type="submit" class="btn-1" id="loginbtn" value="Iniciar Seccion">
-                <p>Si quires aportar a nuestro creciente recetario puedes registrarte</p>
-                <input type="submit" class="btn-1" id="registerbtn" value=" Registrarme">
-            </div>
             <form action="">
                 <h2>Login</h2>
                 <label for="Username">Usuario</label>
@@ -171,7 +164,7 @@
                 <input type="text" id="username">
                 <label for="Password">Contraseña</label>
                 <input type="password" id="password">
-                <input type="submit" class="btn-1" value="Iniciar">
+                <input type="submit" class="btn-1" value="Registrarse">
             </form>
         </div>
     </section>   
