--- a/Index.html
+++ b/Index.html
@@ -142,30 +142,56 @@
             </div>
         </div>
     </section>
-    <section class="register"><!--REGITRO-->
-        <div class="cont_register">
-            <form action="">
-                <h2>Login</h2>
-                <label for="Username">Usuario</label>
-                <input type="text" id="username">
-                <label for="Password">Contraseña</label>
-                <input type="password" id="password">
-                <div class="remember">
-                    <p>Recordar</p>
-                    <p>Olvide contraseña</p>
+    <section class="cont-register"><!--REGITRO-->
+        <div class="login-container">
+            <div class="login-info-container">
+              <h1 class="title">Inicia seccion</h1>
+              <div class="social-login">
+                  <div class="social-login-element">
+                      <i class="fa-regular fa-envelope"></i>
+                      <span>Google</span>
+                  </div>
+                  <div class="social-login-element">
+                      <i class="fa-brands fa-instagram"></i>
+                      <span>Instagram</span>
+                  </div>
+              </div>
+              <p>O</p>
+              <form class="inputs-container">
+                  <input class="input" type="text" placeholder="Usuario">
+                  <input class="input" type="text" placeholder="Contraseña">
+                  <p>Olvidaste tu contraseña? <span class="span">Click</span></p>
+                    <button class="btn">Iniciar Seccion</button>
+                    <p>No tienes una cuenta? <span class="span">Reguistrese</span></p>
+              </form>
+            </div>
+              <img class="image-container" src="images/login.svg" alt="">
+        </div>
+        <div class="register-container">
+            <div class="login-info-container">
+                <h1 class="title">registrarse</h1>
+                <div class="social-login">
+                    <div class="social-login-element">
+                        <i class="fa-regular fa-envelope"></i>
+                        <span>Google</span>
+                    </div>
+                    <div class="social-login-element">
+                        <i class="fa-brands fa-instagram"></i>
+                        <span>Instagram</span>
+                    </div>
                 </div>
-                <input type="submit" class="btn-1" value="Iniciar">
-            </form>
-            <form action="">
-                <h2>Register</h2>
-                <label for="Email">Email</label>
-                <input type="email" id="email">
-                <label for="Username">Ingrese Nombre De Usuario</label>
-                <input type="text" id="username">
-                <label for="Password">Contraseña</label>
-                <input type="password" id="password">
-                <input type="submit" class="btn-1" value="Registrarse">
-            </form>
+                <p>O</p>
+                <form class="inputs-container">
+                    <input class="input" type="text" placeholder="Email">
+                    <input class="input" type="text" placeholder="Usuario">
+                    <input class="input" type="text" placeholder="Contraseña">
+                    <p>Olvidaste tu contraseña? <span class="span">Cliquea Aqui</span></p>
+                    <button class="btn">Iniciar Seccion</button>
+                    <p>No tienes una cuenta? <span class="span">Reguistrese</span></p>
+                </form>
+              </div>
+                <img class="image-container" src="images/login.svg" alt="">
+          </div>
         </div>
     </section>   
     </main>
